--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "connect-ssi": "^1.1.1",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
-    "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.1.0",
     "gulp-connect": "^5.7.0",
+    "gulp-dart-sass": "^1.0.2",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2"
-  }
+  },
+  "dependencies": {}
 }
